# gl_diagnostic_network_roots

./: .gitignore  Makefile  README.md  traceroute
OpenWRT/: Makefile
network-utility/: CMakeLists.txt  Makefile  README.md
network-utility/include/: config.h
network-utility/src/: main.cpp  traceroute.cpp  traceroute.h
network-utility/src/types/: index.h
network-utility/src/utils/: network_utils.cpp  network_utils.h
network-utility/tests/: test_network_utils.cpp  test_traceroute.cpp
src/: checksum.c  checksum.h  construct_packet.c  construct_packet.h  fqdn.c  fqdn.h  main.c  networking.c  networking.h
test/: test_file.sh
